version 0.9.6 (TBA):
	* Add future plans to the TODO list
	* Update documentation to reflect the current keybindings
	* Fix Ubuntu's bugs about copy and paste

version 0.9.5 (12-12-07):
	* Fixed clear/reset issue
	* Switched to Gnome shortcut keys
	* Fixed background scrolling bug
	* Tabs now loop to beginning/end for next/prev
	* Better animation support
	* Major code reorganization
	* Make WWW links Ctrl+Left Click to open in a web browser
	* Remove old configuration conversion script
	* Updated documentation
	* Use glade to generate the config wizard
	* Gettextize for translations
	* Added true transparency
	* Made scrollbar off by default
	* Fixed another bug in getting the new lock file (Thanks Wilberding)
	* Removed resize/move from hide when animation is turned off.
	  This will fix the closing of certain program (i.e. nano) when
	  Tilda is hidden
	* To keep Tilda open on 'exit' set
	  Preferences->Title and Command->When Command Exits to
	  "Hold the Terminal Open"

version 0.9.4 (11-28-06):
	* Double Buffering is now in the Preferences. Enable or disable to fix
	  problems with blinking on your system
	* Add support for a window icon.
	* Add a --hidden command line option.
	* Change "Display pulled down on start" to "Start Tilda hidden".
	* Updated the Preferences window.
	* Add "centered horizontally" and "centered vertically" options.
	* Enable double buffering by default.
	* Fix getnextinstance() function.
	* Changed default slide delay to 15000
	* Now installs .desktop file and icon
	* Set copy/paste to ctrl-shift-c/ctrl-shift-v
	* Alt-# for switching tabs now :), sorry for all the changes
	* Changed getinstance back to its old way of working,
	  so it doesn't just count locks but checks the numbers (thanks wilber)

version 0.09.3 (2006-6-28):
	* ctrl-# changes tab, sorry not alt-# (bash uses that)
	* ctrl-shift-w fix
	* Added ability to set height/width by percentage of screen resolution
	* All Tabs are now the same size