@@ -1,4 +1,6 @@
 version 0.9.6 (TBA):
+	* Move bugtracker to http://bugs.launchpad.net/tilda
+	* Fix metacity focus problems (hopefully)
 	* Add future plans to the TODO list
 	* Update documentation to reflect the current keybindings
 	* Fix Ubuntu's bugs about copy and paste
